--- a/lab2AIML.ipynb
+++ b/lab2AIML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOk2TtQ98O+2v9wb9tbitqj",
+      "authorship_tag": "ABX9TyOEPR4c2YttGT0ZP5CgLtiE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,7 +225,7 @@
         "        puzzle, parent, gn, hn = state[position]\n",
         "        puzzle = np.array(puzzle)\n",
         "\n",
-        "        blank = int(np.where(puzzle == 0)[0])\n",
+        "        blank = int(np.where(puzzle == 0)[0][0])\n",
         "\n",
         "        gn = gn + 1\n",
         "        c = 1\n",
@@ -299,9 +299,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "30PzecFDhV7p",
-        "outputId": "c59b9734-5bb6-46b7-e265-dbeb70529c85"
+        "outputId": "28efd7e7-c720-49b4-ef0d-01f0f4b04c32"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -336,14 +336,6 @@
             "Steps to reach goal: 5\n",
             "Total nodes visited:  6 \n",
             "\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "<ipython-input-3-4e24546a43a4>:65: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
-            "  blank = int(np.where(puzzle == 0)[0])\n"
           ]
         }
       ]
